<package>
    <name>dstarl_planner</name>
    <version>1.14.4</version>
    <description>

        This planner attempts to find a legal place to put a srrt for the robot to follow. It does this by moving back along the vector between the robot and the goal point.

    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>Sachin Chitta</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
    <maintainer email="ahoy@fetchrobotics.com">Aaron Hoy</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/dstarl_planner</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>navfn</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>global_planner</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>navfn</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>angles</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>global_planner</run_depend>

    <export>
        <nav_core plugin="${prefix}/bgp_plugin.xml" />
    </export>

</package>